add missing files

--- a/solutions/LSTM.ipynb
+++ b/solutions/LSTM.ipynb
@@ -155,15 +155,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = onp.zeros((n_sequences, seq_length, vocab_size))\n",
-    "Y = onp.zeros((n_sequences, vocab_size)) \n",
+    "import numpy as onp ### import ordinary numpy\n",
+    "\n",
+    "X = onp.zeros((n_sequences, seq_length, vocab_size)) ### use onp\n",
+    "Y = onp.zeros((n_sequences, vocab_size)) ### use onp\n",
     "\n",
     "for i, seq in enumerate(sequences):\n",
     "    for t, char in enumerate(seq):\n",
-    "        X[i, t, char_to_id[char]] = 1 \n",
-    "    Y[i, char_to_id[next_chars[i]]] = 1 \n",
-    "X = np.array(X) \n",
-    "Y = np.array(Y)"
+    "        X[i, t, char_to_id[char]] = 1 ### change syntax\n",
+    "    Y[i, char_to_id[next_chars[i]]] = 1 ### change syntax\n",
+    "\n",
+    "X = np.array(X) # convert to jax\n",
+    "Y = np.array(Y) # convert to jax"
    ]
   },
   {
@@ -177,17 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_1\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_1\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -199,11 +202,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ lstm (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                     │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)      │       <span style=\"color: #00af00; text-decoration-color: #00af00\">109,568</span> │\n",
+       "│ lstm_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)      │       <span style=\"color: #00af00; text-decoration-color: #00af00\">109,568</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">20,608</span> │\n",
+       "│ lstm_3 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">20,608</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">85</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">2,805</span> │\n",
+       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">85</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">2,805</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -211,11 +214,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ lstm (\u001b[38;5;33mLSTM\u001b[0m)                     │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m)      │       \u001b[38;5;34m109,568\u001b[0m │\n",
+       "│ lstm_2 (\u001b[38;5;33mLSTM\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m)      │       \u001b[38;5;34m109,568\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_1 (\u001b[38;5;33mLSTM\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │        \u001b[38;5;34m20,608\u001b[0m │\n",
+       "│ lstm_3 (\u001b[38;5;33mLSTM\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │        \u001b[38;5;34m20,608\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m85\u001b[0m)             │         \u001b[38;5;34m2,805\u001b[0m │\n",
+       "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m85\u001b[0m)             │         \u001b[38;5;34m2,805\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,114 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 97590 samples, validate on 5137 samples\n",
       "Epoch 1/50\n",
-      "97590/97590 [==============================] - 93s 954us/step - loss: 3.1692 - acc: 0.1665 - val_loss: 3.3205 - val_acc: 0.1468\n",
-      "Epoch 2/50\n",
-      "97590/97590 [==============================] - 89s 911us/step - loss: 2.9687 - acc: 0.2177 - val_loss: 3.1871 - val_acc: 0.2040\n",
-      "Epoch 3/50\n",
-      "97590/97590 [==============================] - 90s 924us/step - loss: 2.6726 - acc: 0.2905 - val_loss: 2.9142 - val_acc: 0.2488\n",
-      "Epoch 4/50\n",
-      "97590/97590 [==============================] - 90s 922us/step - loss: 2.4496 - acc: 0.3212 - val_loss: 2.7644 - val_acc: 0.2768\n",
-      "Epoch 5/50\n",
-      "97590/97590 [==============================] - 92s 945us/step - loss: 2.3249 - acc: 0.3417 - val_loss: 2.6926 - val_acc: 0.2938\n",
-      "Epoch 6/50\n",
-      "97590/97590 [==============================] - 91s 933us/step - loss: 2.2467 - acc: 0.3603 - val_loss: 2.6385 - val_acc: 0.3132\n",
-      "Epoch 7/50\n",
-      "97590/97590 [==============================] - 90s 927us/step - loss: 2.1832 - acc: 0.3736 - val_loss: 2.6122 - val_acc: 0.3159\n",
-      "Epoch 8/50\n",
-      "97590/97590 [==============================] - 94s 964us/step - loss: 2.1345 - acc: 0.3844 - val_loss: 2.5748 - val_acc: 0.3290\n",
-      "Epoch 9/50\n",
-      "97590/97590 [==============================] - 94s 964us/step - loss: 2.0914 - acc: 0.3945 - val_loss: 2.5702 - val_acc: 0.3272\n",
-      "Epoch 10/50\n",
-      "97590/97590 [==============================] - 94s 961us/step - loss: 2.0545 - acc: 0.4057 - val_loss: 2.5350 - val_acc: 0.3342\n",
-      "Epoch 11/50\n",
-      "97590/97590 [==============================] - 92s 940us/step - loss: 2.0217 - acc: 0.4139 - val_loss: 2.5169 - val_acc: 0.3409\n",
-      "Epoch 12/50\n",
-      "97590/97590 [==============================] - 97s 991us/step - loss: 1.9917 - acc: 0.4212 - val_loss: 2.4951 - val_acc: 0.3426\n",
-      "Epoch 13/50\n",
-      "97590/97590 [==============================] - 87s 894us/step - loss: 1.9662 - acc: 0.4301 - val_loss: 2.4913 - val_acc: 0.3475\n",
-      "Epoch 14/50\n",
-      "97590/97590 [==============================] - 90s 926us/step - loss: 1.9407 - acc: 0.4363 - val_loss: 2.4652 - val_acc: 0.3539\n",
-      "Epoch 15/50\n",
-      "97590/97590 [==============================] - 92s 945us/step - loss: 1.9170 - acc: 0.4434 - val_loss: 2.4476 - val_acc: 0.3557\n",
-      "Epoch 16/50\n",
-      "97590/97590 [==============================] - 92s 938us/step - loss: 1.9079 - acc: 0.4466 - val_loss: 2.4346 - val_acc: 0.3599\n",
-      "Epoch 17/50\n",
-      "97590/97590 [==============================] - 89s 915us/step - loss: 1.8782 - acc: 0.4543 - val_loss: 2.4382 - val_acc: 0.3609\n",
-      "Epoch 18/50\n",
-      "97590/97590 [==============================] - 90s 922us/step - loss: 1.8596 - acc: 0.4596 - val_loss: 2.4161 - val_acc: 0.3627\n",
-      "Epoch 19/50\n",
-      "97590/97590 [==============================] - 89s 910us/step - loss: 1.8431 - acc: 0.4644 - val_loss: 2.4029 - val_acc: 0.3701\n",
-      "Epoch 20/50\n",
-      "97590/97590 [==============================] - 90s 918us/step - loss: 1.8256 - acc: 0.4683 - val_loss: 2.3978 - val_acc: 0.3736\n",
-      "Epoch 21/50\n",
-      "97590/97590 [==============================] - 90s 917us/step - loss: 1.8113 - acc: 0.4731 - val_loss: 2.3755 - val_acc: 0.3794\n",
-      "Epoch 22/50\n",
-      "97590/97590 [==============================] - 90s 919us/step - loss: 1.7956 - acc: 0.4765 - val_loss: 2.3801 - val_acc: 0.3767\n",
-      "Epoch 23/50\n",
-      "97590/97590 [==============================] - 90s 926us/step - loss: 1.7807 - acc: 0.4798 - val_loss: 2.3689 - val_acc: 0.3757\n",
-      "Epoch 24/50\n",
-      "97590/97590 [==============================] - 91s 929us/step - loss: 1.7784 - acc: 0.4829 - val_loss: 2.4306 - val_acc: 0.3625\n",
-      "Epoch 25/50\n",
-      "97590/97590 [==============================] - 94s 964us/step - loss: 1.7932 - acc: 0.4802 - val_loss: 2.4116 - val_acc: 0.3726\n",
-      "Epoch 26/50\n",
-      "97590/97590 [==============================] - 95s 973us/step - loss: 1.7820 - acc: 0.4821 - val_loss: 2.4130 - val_acc: 0.3681\n",
-      "Epoch 27/50\n",
-      "97590/97590 [==============================] - 92s 945us/step - loss: 1.7768 - acc: 0.4834 - val_loss: 2.3831 - val_acc: 0.3749\n",
-      "Epoch 28/50\n",
-      "97590/97590 [==============================] - 93s 950us/step - loss: 1.7525 - acc: 0.4898 - val_loss: 2.3798 - val_acc: 0.3706\n",
-      "Epoch 29/50\n",
-      "97590/97590 [==============================] - 94s 962us/step - loss: 1.7402 - acc: 0.4925 - val_loss: 2.3740 - val_acc: 0.3759\n",
-      "Epoch 30/50\n",
-      "97590/97590 [==============================] - 93s 954us/step - loss: 1.7301 - acc: 0.4951 - val_loss: 2.3694 - val_acc: 0.3741\n",
-      "Epoch 31/50\n",
-      "97590/97590 [==============================] - 93s 954us/step - loss: 1.7194 - acc: 0.4986 - val_loss: 2.3660 - val_acc: 0.3866\n",
-      "Epoch 32/50\n",
-      "97590/97590 [==============================] - 95s 973us/step - loss: 1.7067 - acc: 0.5013 - val_loss: 2.3639 - val_acc: 0.3860\n",
-      "Epoch 33/50\n",
-      "97590/97590 [==============================] - 94s 963us/step - loss: 1.6954 - acc: 0.5046 - val_loss: 2.3659 - val_acc: 0.3850\n",
-      "Epoch 34/50\n",
-      "97590/97590 [==============================] - 94s 966us/step - loss: 1.6864 - acc: 0.5074 - val_loss: 2.3389 - val_acc: 0.3971\n",
-      "Epoch 35/50\n",
-      "97590/97590 [==============================] - 94s 961us/step - loss: 1.6744 - acc: 0.5101 - val_loss: 2.3317 - val_acc: 0.3946\n",
-      "Epoch 36/50\n",
-      "97590/97590 [==============================] - 95s 973us/step - loss: 1.6515 - acc: 0.5163 - val_loss: 2.3304 - val_acc: 0.3921\n",
-      "Epoch 37/50\n",
-      "97590/97590 [==============================] - 95s 973us/step - loss: 1.6393 - acc: 0.5184 - val_loss: 2.3323 - val_acc: 0.3969\n",
-      "Epoch 38/50\n",
-      "97590/97590 [==============================] - 96s 982us/step - loss: 1.6297 - acc: 0.5214 - val_loss: 2.3258 - val_acc: 0.4039\n",
-      "Epoch 39/50\n",
-      "97590/97590 [==============================] - 96s 982us/step - loss: 1.6221 - acc: 0.5236 - val_loss: 2.3035 - val_acc: 0.4032\n",
-      "Epoch 40/50\n",
-      "97590/97590 [==============================] - 95s 973us/step - loss: 1.6085 - acc: 0.5270 - val_loss: 2.3191 - val_acc: 0.4014\n",
-      "Epoch 41/50\n",
-      "97590/97590 [==============================] - 96s 985us/step - loss: 1.6007 - acc: 0.5297 - val_loss: 2.3163 - val_acc: 0.4100\n",
-      "Epoch 42/50\n",
-      "97590/97590 [==============================] - 95s 976us/step - loss: 1.5951 - acc: 0.5309 - val_loss: 2.3213 - val_acc: 0.4041\n",
-      "Epoch 43/50\n",
-      "97590/97590 [==============================] - 96s 980us/step - loss: 1.5869 - acc: 0.5331 - val_loss: 2.3165 - val_acc: 0.4088\n",
-      "Epoch 44/50\n",
-      "97590/97590 [==============================] - 96s 979us/step - loss: 1.5786 - acc: 0.5354 - val_loss: 2.3335 - val_acc: 0.4098\n",
-      "Epoch 45/50\n",
-      "97590/97590 [==============================] - 96s 984us/step - loss: 1.5670 - acc: 0.5385 - val_loss: 2.3199 - val_acc: 0.4119\n",
-      "Epoch 46/50\n",
-      "97590/97590 [==============================] - 98s 1000us/step - loss: 1.5590 - acc: 0.5408 - val_loss: 2.3173 - val_acc: 0.4111\n",
-      "Epoch 47/50\n",
-      "97590/97590 [==============================] - 97s 993us/step - loss: 1.5496 - acc: 0.5432 - val_loss: 2.3151 - val_acc: 0.4127\n",
-      "Epoch 48/50\n",
-      "97590/97590 [==============================] - 96s 988us/step - loss: 1.5400 - acc: 0.5455 - val_loss: 2.3126 - val_acc: 0.4181\n",
-      "Epoch 49/50\n",
-      "97590/97590 [==============================] - 97s 996us/step - loss: 1.5332 - acc: 0.5477 - val_loss: 2.2935 - val_acc: 0.4203\n",
-      "Epoch 50/50\n",
-      "97590/97590 [==============================] - 98s 1ms/step - loss: 1.5233 - acc: 0.5516 - val_loss: 2.3145 - val_acc: 0.4137\n"
+      "\u001b[1m662/763\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━\u001b[0m \u001b[1m9s\u001b[0m 99ms/step - accuracy: 0.1522 - loss: 3.3420   "
      ]
     }
    ],
