remove density; add jax tutorial

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,9 @@
     "## [Yoav Ram](http://python.yoavram.com)\n",
     "\n",
     "http://python.yoavram.com\n",
-    "yoav@yoavram.com"
+    "yoav@yoavram.com\n",
+    "\n",
+    "- [JAX tutorial](https://colinraffel.com/blog/you-don-t-know-jax.html) by Colin Raffel"
    ]
   },
   {
@@ -82,7 +84,6 @@
     "- [Autoencoders](sessions/autoencoders.ipynb)\n",
     "- [Generative adversarial networks](sessions/GAN.ipynb)\n",
     "- [Transformers](sessions/transformer.ipynb)\n",
-    "- [Density estimation](sessions/density-estimation.ipynb)\n",
     "\n",
     "## Exercises\n",
     "- [Long Short Term Memory](exercises/LSTM.ipynb) | [solution](solutions/LSTM.ipynb)\n",
