--- a/index.ipynb
+++ b/index.ipynb
@@ -80,6 +80,7 @@
    "source": [
     "# Day 4\n",
     "- [Recurrent neural networks](sessions/RNN.ipynb)\n",
+    "- [Gated recurrent networks](sessions/GRU.ipynb)\n",
     "- [Keras functional API](sessions/functional_keras.ipynb) | [solution](solutions/functional_keras.ipynb)\n",
     "- [Autoencoders](sessions/autoencoders.ipynb)\n",
     "- [Generative adversarial networks](sessions/GAN.ipynb)\n",
