ffn fashion ex idea

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,8 @@
     "- [Feed forward networks](sessions/FFN.ipynb)\n",
     "\n",
     "## Exercises\n",
-    "- Extend FFN to more than two layers"
+    "- Extend FFN to more than two layers\n",
+    "- Train a FFN on the [Fashion MNIST dataset](https://keras.io/api/datasets/fashion_mnist/)"
    ]
   },
   {
