--- a/exercises/LSTM.ipynb
+++ b/exercises/LSTM.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# LSTM with Keras\n",
     "\n",
-    "In practice, there are some [problems with training RNN](https://towardsdatascience.com/understanding-lstm-and-its-quick-implementation-in-keras-for-sentiment-analysis-af410fd85b47), and most applications use a variation called [LSTM](http://colah.github.io/posts/2015-08-Understanding-LSTMs/)\n",
+    "In practice, there are some problems with training RNN, which led to the development of [a variation called LSTM](http://colah.github.io/posts/2015-08-Understanding-LSTMs/).\n",
     "\n",
     "Let's use an LSTM network to [predict word completions](http://curiousily.com/data-science/2017/05/23/tensorflow-for-hackers-part-5.html) for [Jonathan Swift](https://en.wikipedia.org/wiki/Jonathan_Swift), the author of Gulliver's Travels."
    ]
