--- a/solutions/LSTM.ipynb
+++ b/solutions/LSTM.ipynb
@@ -6,21 +6,21 @@
    "source": [
     "# LSTM with Keras\n",
     "\n",
-    "In practice, there are some [problems with training RNN](https://towardsdatascience.com/understanding-lstm-and-its-quick-implementation-in-keras-for-sentiment-analysis-af410fd85b47), and most applications use a variation called [LSTM](http://colah.github.io/posts/2015-08-Understanding-LSTMs/)\n",
+    "In practice, there are some problems with training RNN, which led to the development of [a variation called LSTM](http://colah.github.io/posts/2015-08-Understanding-LSTMs/).\n",
     "\n",
     "Let's use an LSTM network to [predict word completions](http://curiousily.com/data-science/2017/05/23/tensorflow-for-hackers-part-5.html) for [Jonathan Swift](https://en.wikipedia.org/wiki/Jonathan_Swift), the author of Gulliver's Travels."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Keras: 3.7.0 backend: jax cpu\n"
+      "Keras: 3.8.0 backend: jax cpu\n"
      ]
     }
    ],
@@ -31,9 +31,18 @@
     "import jax.numpy as np\n",
     "import numpy as onp\n",
     "import jax\n",
+    "import os\n",
+    "os.environ['KERAS_BACKEND'] = 'jax'\n",
     "import keras\n",
     "print('Keras:', keras.__version__, 'backend:', keras.backend.backend(), jax.default_backend())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
