set keras backend tip

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,6 +92,28 @@
     "- [Simple GAN](exercises/GAN.ipynb) | [solution](solutions/GAN.ipynb)\n",
     "- [Auxilary Classifier Generative adversarial networks](exercises/ACGAN.ipynb) | [solution](solutions/ACGAN.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32f6247a-0f70-41b1-bb11-97ff917c1957",
+   "metadata": {},
+   "source": [
+    "# Tips\n",
+    "1. To use Keras with JAX backend:\n",
+    "```python\n",
+    "import os\n",
+    "os.environ['KERAS_BACKEND'] = 'jax'\n",
+    "import keras\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee155edb-a305-484d-8de0-bdd2e7494e21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
