remove jax tutorial link

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,9 +11,7 @@
     "## [Yoav Ram](http://python.yoavram.com)\n",
     "\n",
     "http://python.yoavram.com\n",
-    "yoav@yoavram.com\n",
-    "\n",
-    "- [JAX tutorial](https://colinraffel.com/blog/you-don-t-know-jax.html) by Colin Raffel"
+    "yoav@yoavram.com\n"
    ]
   },
   {
